<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backArrowImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_back_arrow_white_24"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/appDescriptionTextView"
        style="@style/TextStyle.Medium.32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_difficulty"
        android:textAlignment="center"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.thundernorain.design_system.menu.MenuButtonView
        android:id="@+id/easyDifficultyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDescriptionTextView"
        app:text="@string/difficulty_easy" />

    <com.thundernorain.design_system.menu.MenuButtonView
        android:id="@+id/mediumDifficultyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyDifficultyButton"
        app:text="@string/difficulty_medium" />

    <com.thundernorain.design_system.menu.MenuButtonView
        android:id="@+id/hardDifficultyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumDifficultyButton"
        app:text="@string/difficulty_hard" />

</androidx.constraintlayout.widget.ConstraintLayout>